[package]
name = "eaf-rs"
version = "0.6.1"
edition = "2021"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
description = "Read/write ELAN files"
repository = "https://github.com/jenslar/eaf-rs"
keywords = ["elan", "eaf", "pfsx", "annotation", "xml"]
license-file = "MIT"

[dependencies]
time = { version = "0.3.36", features = [ "formatting", "serde" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.138"
quick-xml = { version = "0.37.2", features = [ "serialize", "overlapped-lists" ] }
regex = "1.11.1"
rayon = "1.10"
csv = "1.3.1"
unicode-segmentation = "1.12.0"
termcolor = "1.4.1"
blake3 = "1.5.5"
uuid = { version = "1.13.1", features = ["v4"]}
url = {version = "2.5.4", features = ["serde"]}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
