[package]
name = "eaf-rs"
version = "0.6.4"
edition = "2024"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
description = "Read/write ELAN files"
repository = "https://github.com/jenslar/eaf-rs"
keywords = ["elan", "eaf", "pfsx", "annotation", "xml"]
license-file = "MIT"

[dependencies]
time = { version = "0.3.40", features = [ "formatting", "serde" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
quick-xml = { version = "0.38.3", features = [ "serialize", "overlapped-lists" ] }
regex = "1.12.2"
rayon = "1.11"
csv = "1.3.1"
unicode-segmentation = "1.12.0"
termcolor = "1.4.1"
blake3 = "1.8"
uuid = { version = "1.18.1", features = ["v4"]}
url = {version = "2.5.7", features = ["serde"]}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
